Fix displaying code blocks Somehow by default first line has small gap (or other lines does not have that padding) which make looking at large blocks of code unpleasant

--- a/site/public/styles/global.css
+++ b/site/public/styles/global.css
@@ -229,6 +229,7 @@ code {
   padding: 0 0.25em;
   border-radius: 3px;
   border: 1px solid rgba(0, 0, 0, 0.1);
+  display: inline-block;
 }
 
 thead {
